# blackmatter-cli

./: .typescape.yaml  CLAUDE.md  Cargo.nix  Cargo.toml  README.md  flake.nix
module/: default.nix
src/: fleet.rs  main.rs  nix.rs
